Instragam button bug
The instagram button used to redirect to email

--- a/contactme.html
+++ b/contactme.html
@@ -49,12 +49,12 @@
         <div class="social">
             <div class="gmail">
                 <h2><a href="mailto:andreluiscapela@gmail.com">>>Email me<<</a></h2>
-                <a href="mailto:andreluiscapela@gmail.com"><img src="Images/GMAILLOGO.png" alt=""></a>
+                <a href="mailto:andreluiscapela@gmail.com"><img src="Images/GMAILLOGO.png" alt="My instagram"></a>
             </div>
 
             <div class="instagram">
-                <h2><a href="mailto:andreluiscapela@gmail.com">>>My instagram<<</a></h2>
-                <a href="mailto:andreluiscapela@gmail.com"><img src="Images/MYINSTA.jpeg" alt=""></a>              
+                <h2><a href="https://www.instagram.com/tk.lord_/" target="_blank">>>My instagram<<</a></h2>
+                <a href="https://www.instagram.com/tk.lord_/" target="_blank"><img src="Images/MYINSTA.jpeg" alt=""></a>              
             </div>
         </div>
     </main>
