Home pages button bug

--- a/index.html
+++ b/index.html
@@ -65,16 +65,15 @@
             </div>
 
             <div>
-                <a href="about.html"><img src="Images/Apro-removebg-preview.png" alt="photo of André"
-                        id="personalPhoto"></a>
+                <a href="about.html"><img src="Images/Apro-removebg-preview.png" alt="photo of André" id="personalPhoto"></a>
             </div>
 
         </section>
 
         <section class="quotesNButton">
             <div class="portifolioNAbout">
-                <button class="siteButton" id="portifolioButton"><a href="portifolio.html">Portifolio</a></button>
-                <button class="siteButton" id="aboutButton"><a href="about.html">About</a></button>
+                <a href="portifolio.html"><button class="siteButton" id="portifolioButton">Portifolio</button></a>
+                <a href="about.html"><button class="siteButton" id="aboutButton">About</button></a>
             </div>
 
             <p>“The bad news is nothing lasts forever. The good news is nothing lasts forever. So no matter how hard
