--- a/contactme.html
+++ b/contactme.html
@@ -33,11 +33,11 @@
             <button class="menu"><i class="fa-solid fa-bars fa-xl"></i></button>
             <div class="menuOptions">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="career.html">Career</a></li>
-                    <li><a href="portifolio.html">Portifolio</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contactme.html">Contact me</a></li>
+                    <a href="index.html"><li>Home</li></a>
+                    <a href="career.html"><li>Career</li></a>
+                    <a href="portifolio.html"><li>Portifolio</li></a>
+                    <a href="about.html"><li>About</li></a>
+                    <a href="contactme.html"><li>Contact me</li></a>
                 </ul>
             </div>
         </div>
