Adding facebook to contact me

--- a/contactme.html
+++ b/contactme.html
@@ -49,12 +49,17 @@
         <div class="social">
             <div class="gmail">
                 <h2><a href="mailto:andreluiscapela@gmail.com">>>Email me<<</a></h2>
-                <a href="mailto:andreluiscapela@gmail.com"><img src="Images/GMAILLOGO.png" alt="My instagram"></a>
+                <a href="mailto:andreluiscapela@gmail.com"><img src="Images/GMAILLOGO.png" alt="My Email"></a>
             </div>
 
             <div class="instagram">
-                <h2><a href="https://www.instagram.com/tk.lord_/" target="_blank">>>My instagram<<</a></h2>
-                <a href="https://www.instagram.com/tk.lord_/" target="_blank"><img src="Images/MYINSTA.jpeg" alt=""></a>              
+                <h2><a href="https://www.instagram.com/tk.lord_/" target="_blank">>>My Instagram<<</a></h2>
+                <a href="https://www.instagram.com/tk.lord_/" target="_blank"><img src="Images/MYINSTA.jpeg" alt="My Instagram"></a>              
+            </div>
+
+            <div class="facebook">
+                <h2><a href="https://www.facebook.com/andreluis.dalva" target="_blank">>>My Facebook<<</a></h2>
+                <a href="https://www.facebook.com/andreluis.dalva" target="_blank"><img src="Images/MYFACEBOOK.jpg" alt="My facebook"></a>
             </div>
         </div>
     </main>
