Facebook to capital

--- a/contactme.html
+++ b/contactme.html
@@ -59,7 +59,7 @@
 
             <div class="facebook">
                 <h2><a href="https://www.facebook.com/andreluis.dalva" target="_blank">>>My Facebook<<</a></h2>
-                <a href="https://www.facebook.com/andreluis.dalva" target="_blank"><img src="Images/MYFACEBOOK.jpg" alt="My facebook"></a>
+                <a href="https://www.facebook.com/andreluis.dalva" target="_blank"><img src="Images/MYFACEBOOK.jpg" alt="My Facebook"></a>
             </div>
         </div>
     </main>
