Contact me button on the horizontal bar

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="contactMe">
-            <button class="siteButton"><a href="contactme.html">Contact me</a></button>
+            <a href="contactme.html"><button class="siteButton">Contact me</button></a>
         </div>
 
 
