Adding html and css topics

--- a/career.html
+++ b/career.html
@@ -70,20 +70,31 @@
         <section class="skills">
             <div class="leftSkills">
                 <h3>Html5 & Css3</h3>
-                <p>With +5h of watching youtube tutorials I have learnt HTML5 and CSS3.<br>
+                <p>With +20h of self-teaching (through youtube tutorials, reading and practicing) I have learnt the Fundamentals of HTML5 and CSS3.
                 </p>
                 <p>
                 <details>
-                    <summary>Detailed description:</summary>
-                    <p>&#x2022; Html essential tags</p>
-                    <p>&#x2022; CSS</p>
+                    <summary>Topics:</summary>
+                    <p>&#x2022;<b>For HTML</b>&#x2022;</p>
+                    <p>&#x2022; <b>Html Document structure:</b> Head and body tags</p>
+                    <p>&#x2022; <b>Tags:</b> Texts and paragraphs tags, Lists, Table, Links, Imgs.</p>
+                    <p>&#x2022; <b>Containers:</b> Div and nav tags.</p>
+                    <p>&#x2022; <b>Semantic Html:</b> Section,nav, main, header, footer, article and aside tags.</p>
+
+                    <p>&#x2022;<b>For CSS</b>&#x2022;</p>
+                    <p>&#x2022; <b>Selectors:</b> Element, class and id.</p>
+                    <p>&#x2022; <b>Box Model:</b> Magin, Border and Padding.</p>
+                    <p>&#x2022; <b>Layout Techniques:</b> Display, Position and Float.</p>
+                    <p>&#x2022; <b>Typography & Colors:</b> Color, background-color, text align, line height, letter-spacing, font-family, font-weight, font  size and google fonts.</p>
+                    <p>&#x2022; <b>Flexbox:</b> Justify-content, align-items and flex-wrap.</p>
+                    <p>&#x2022; Transitions and Animations.</p>
                 </details>
                 </p>
             </div>
 
             <div class="rightSkills">
                 <h3>Java</h3>
-                <p>With +5h of youtube tutorials and 22h of practicing classes at the University I have learnt the basics and some advance concepts of Java.</p>
+                <p>With +5h of youtube tutorials and 22h of practicing classes at the University I have learnt the intermediate and some advance concepts of Java.</p>
                 <p>
                 <details>
                     <summary>Topics learned:</summary>
