Adding Git and Github skills

--- a/career.html
+++ b/career.html
@@ -121,6 +121,21 @@
                 </details>
                 </p>
             </div>
+
+            <div class="leftSkills">
+                <h3>Git & Github</h3>
+                <p>With +8h of Self-teaching (through youtube tutorials, reading and practicing), I have learnt the core concepts of version control managment (GIT), well as the importance of using remote repository(GITHUB)</p>
+                <p>
+                    <details>
+                    <summary>Topics:</summary>
+                    <p>&#x2022; <b>General:</b> Local and remote repository utility, checking status, rename, move, delete, restore, ignore(.gitignore) and track files.</p>
+                    <p>&#x2022; <b>Staging:</b> Adding, removing, comparing files on the stage area.</p>
+                    <p>&#x2022; <b>Comminting:</b> Commiting files, checking commits, comparing changes, reseting past commits.</p>
+                    <p>&#x2022; <b>Branches:</b> Creating, deleting, changing and merging branches.</p>
+                    </details>
+                </p>
+                
+            </div>
         </section>
 
     </main>
