Scroll Bug on Carrer.
When scrolling the content used to over float the navigation bar.

--- a/career.html
+++ b/career.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Career</title>
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/career.css">
     <script src="https://kit.fontawesome.com/ed8ed1d0d5.js" crossorigin="anonymous"></script>
@@ -68,7 +68,7 @@
         <h2><span class="coloredLetter">S</span>kills:</h2>
 
         <section class="skills">
-            <div class="leftSkills">
+            <div class="skillscontainer">
                 <h3>Html5 & Css3</h3>
                 <p>With +20h of self-teaching (through youtube tutorials, reading and practicing) I have learnt the Fundamentals of HTML5 and CSS3.
                 </p>
@@ -92,7 +92,7 @@
                 </p>
             </div>
 
-            <div class="rightSkills">
+            <div class="skillscontainer">
                 <h3>Java</h3>
                 <p>With +5h of youtube tutorials and 22h of practicing classes at the University I have learnt the intermediate and some advance concepts of Java.</p>
                 <p>
@@ -122,7 +122,7 @@
                 </p>
             </div>
 
-            <div class="leftSkills">
+            <div class="skillscontainer">
                 <h3>Git & Github</h3>
                 <p>With +8h of Self-teaching (through youtube tutorials, reading and practicing), I have learnt the core concepts of version control managment (GIT), well as the importance of using remote repository(GITHUB)</p>
                 <p>
