Padding and aligning
Small changes on the padding and aligning

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
     <main>
         <hr class="bar" id="loadingBar">
         <h1 class="pagesTitle">Personal Info</h1>
-        <h2>So, who am <span class="coloredLetter">I</span>??</h2>
+        <h2>So, who am <span class="coloredLetter">I</span>?<span class="blink">?</span></h2>
 
         <div class="myStory">
             <p><b>From</b> a small African island nation near the equator, <a href="https://www.google.com/search?q=sao+tome+and+principe&sca_esv=9fb8ac264fe7f23f&sxsrf=AHTn8zrMxW1vLesy58Ag5BSTBq6f3cf8Nw%3A1740282832743&ei=0Ju6Z576LN7h7_UP8ubD0AI&ved=0ahUKEwieorfg8tiLAxXe8LsIHXLzECoQ4dUDCBA&uact=5&oq=sao+tome+and+principe&gs_lp=Egxnd3Mtd2l6LXNlcnAiFXNhbyB0b21lIGFuZCBwcmluY2lwZTILEAAYgAQYkQIYigUyCxAuGIAEGJECGIoFMgsQABiABBiRAhiKBTILEAAYgAQYkQIYigUyBRAAGIAEMgUQABiABDIFEAAYgAQyBRAAGIAEMgUQABiABDIFEAAYgARI-ApQmwNYqAdwAXgBkAEAmAHYAaABggSqAQUyLjEuMbgBA8gBAPgBAZgCBKAC0QLCAgoQABiwAxjWBBhHwgINEAAYgAQYsAMYQxiKBZgDAIgGAZAGDJIHAzIuMqAH3ho&sclient=gws-wiz-serp" target="_blank">São Tomé and Príncipe</a>, where I was born and lived for 19 years.</p>
