--- a/career.html
+++ b/career.html
@@ -33,11 +33,21 @@
             <button class="menu"><i class="fa-solid fa-bars fa-xl"></i></button>
             <div class="menuOptions">
                 <ul>
-                    <a href="index.html"><li>Home</li></a>
-                    <a href="career.html"><li>Career</li></a>
-                    <a href="portifolio.html"><li>Portifolio</li></a>
-                    <a href="about.html"><li>About</li></a>
-                    <a href="contactme.html"><li>Contact me</li></a>
+                    <a href="index.html">
+                        <li>Home</li>
+                    </a>
+                    <a href="career.html">
+                        <li>Career</li>
+                    </a>
+                    <a href="portifolio.html">
+                        <li>Portifolio</li>
+                    </a>
+                    <a href="about.html">
+                        <li>About</li>
+                    </a>
+                    <a href="contactme.html">
+                        <li>Contact me</li>
+                    </a>
                 </ul>
             </div>
         </div>
@@ -56,87 +66,99 @@
         <h2><span class="coloredLetter">E</span>ducation:</h2>
         <section class="schoolPath">
             <h3>High School:</h3>
-            <p>At the National High School, in São Tomé and Príncipe, I have studied (in Portuguese) subjects like: Physics, Chemistry, Mathematics.</p>
+            <p>At the National High School, in São Tomé and Príncipe, I have studied (in Portuguese) subjects like:
+                Physics, Chemistry, Mathematics.</p>
 
             <h3>University:</h3>
-            <p>Currently in my second year at the University of Debrecen, majoring in Computer Science Engineering (CSE), I have covered key subjects such as: Data Structures and Algorithm, Programming Languages I & II(Java).</p>
+            <p>Currently in my second year at the University of Debrecen, majoring in Computer Science Engineering
+                (CSE), I have covered key subjects such as: Data Structures and Algorithm, Programming Languages I &
+                II(Java).</p>
 
             <h3>Aimed Goals:</h3>
-            <p>For now, I am focused on learning Git & Github, Javascript and Data Base.</p>
+            <p>For now, I am focused on learning Javascript and Data Base.</p>
         </section>
 
         <h2><span class="coloredLetter">S</span>kills:</h2>
-
-        <section class="skills">
-            <div class="skillscontainer">
-                <h3>Html5 & Css3</h3>
-                <p>With +20h of self-teaching (through youtube tutorials, reading and practicing) I have learnt the Fundamentals of HTML5 and CSS3.
-                </p>
-                <p>
-                <details>
-                    <summary>Topics:</summary>
-                    <p>&#x2022;<b>For HTML</b>&#x2022;</p>
-                    <p>&#x2022; <b>Html Document structure:</b> Head and body tags</p>
-                    <p>&#x2022; <b>Tags:</b> Texts and paragraphs tags, Lists, Table, Links, Imgs.</p>
-                    <p>&#x2022; <b>Containers:</b> Div and nav tags.</p>
-                    <p>&#x2022; <b>Semantic Html:</b> Section,nav, main, header, footer, article and aside tags.</p>
-
-                    <p>&#x2022;<b>For CSS</b>&#x2022;</p>
-                    <p>&#x2022; <b>Selectors:</b> Element, class and id.</p>
-                    <p>&#x2022; <b>Box Model:</b> Magin, Border and Padding.</p>
-                    <p>&#x2022; <b>Layout Techniques:</b> Display, Position and Float.</p>
-                    <p>&#x2022; <b>Typography & Colors:</b> Color, background-color, text align, line height, letter-spacing, font-family, font-weight, font  size and google fonts.</p>
-                    <p>&#x2022; <b>Flexbox:</b> Justify-content, align-items and flex-wrap.</p>
-                    <p>&#x2022; Transitions and Animations.</p>
-                </details>
-                </p>
-            </div>
-
-            <div class="skillscontainer">
-                <h3>Java</h3>
-                <p>With +5h of youtube tutorials and 22h of practicing classes at the University I have learnt the intermediate and some advance concepts of Java.</p>
-                <p>
-                <details>
-                    <summary>Topics learned:</summary>
-                    <p>
-                        &#x2022; <b>Java basics:</b> Variables, Data types, Operators and Expressions.
+        <div id="bodycontainer">
+            <section class="skillsSection">
+                <div class="skill">
+                    <h3>Html5 & Css3</h3>
+                    <p>With +20h of self-teaching (through youtube tutorials, reading and practicing) I have learnt the
+                        Fundamentals of HTML5 and CSS3.
                     </p>
                     <p>
-                        &#x2022; <b>Control Flow Statements:</b> Conditional Statements and Looping Statements.
+                    <details>
+                        <summary>Topics:</summary>
+                        <p>&#x2022;<b>For HTML</b>&#x2022;</p>
+                        <p>&#x2022; <b>Html Document structure:</b> Head and body tags</p>
+                        <p>&#x2022; <b>Tags:</b> Texts and paragraphs tags, Lists, Table, Links, Imgs.</p>
+                        <p>&#x2022; <b>Containers:</b> Div and nav tags.</p>
+                        <p>&#x2022; <b>Semantic Html:</b> Section,nav, main, header, footer, article and aside tags.</p>
+
+                        <p>&#x2022;<b>For CSS</b>&#x2022;</p>
+                        <p>&#x2022; <b>Selectors:</b> Element, class and id.</p>
+                        <p>&#x2022; <b>Box Model:</b> Magin, Border and Padding.</p>
+                        <p>&#x2022; <b>Layout Techniques:</b> Display, Position and Float.</p>
+                        <p>&#x2022; <b>Typography & Colors:</b> Color, background-color, text align, line height,
+                            letter-spacing, font-family, font-weight, font size and google fonts.</p>
+                        <p>&#x2022; <b>Flexbox:</b> Justify-content, align-items and flex-wrap.</p>
+                        <p>&#x2022; Transitions and Animations.</p>
+                    </details>
                     </p>
+                </div>
+
+                <div class="skill">
+                    <h3>Git & Github</h3>
+                    <p>With +8h of Self-teaching (through youtube tutorials, reading and practicing), I have learnt the
+                        core concepts of version control managment (GIT), well as the importance of using remote
+                        repository(GITHUB)</p>
                     <p>
-                        &#x2022; <b>Object Oriented Programming: </b>Objects, Classes, Inheritance, Polymorphism,
-                        Encapsulation, Interfaces and Abstraction.
+                    <details>
+                        <summary>Topics:</summary>
+                        <p>&#x2022; <b>General:</b> Local and remote repository utility, checking status, rename, move,
+                            delete, restore, ignore(.gitignore) and track files.</p>
+                        <p>&#x2022; <b>Staging:</b> Adding, removing, comparing files on the stage area.</p>
+                        <p>&#x2022; <b>Comminting:</b> Commiting files, checking commits, comparing changes, reseting
+                            past commits.</p>
+                        <p>&#x2022; <b>Branches:</b> Creating, deleting, changing and merging branches.</p>
+                    </details>
                     </p>
-                    <P>
-                        &#x2022; <b>Exception handling:</b> Try-catch blocks and custom exception handling.
-                    </P>
-                    <P>
-                        &#x2022; <b>File handling:</b> Reading and writing to files.
-                    </P>
-                    <!--<P>
+                </div>
+            </section>
+            <section class="skillsSection">
+                
+                <div class="skill">
+                    <h3>Java</h3>
+                    <p>With +5h of youtube tutorials and 22h of practicing classes at the University I have learnt the
+                        intermediate and some advance concepts of Java.</p>
+                    <p>
+                    <details>
+                        <summary>Topics:</summary>
+                        <p>
+                            &#x2022; <b>Java basics:</b> Variables, Data types, Operators and Expressions.
+                        </p>
+                        <p>
+                            &#x2022; <b>Control Flow Statements:</b> Conditional Statements and Looping Statements.
+                        </p>
+                        <p>
+                            &#x2022; <b>Object Oriented Programming: </b>Objects, Classes, Inheritance, Polymorphism,
+                            Encapsulation, Interfaces and Abstraction.
+                        </p>
+                        <P>
+                            &#x2022; <b>Exception handling:</b> Try-catch blocks and custom exception handling.
+                        </P>
+                        <P>
+                            &#x2022; <b>File handling:</b> Reading and writing to files.
+                        </P>
+                        <!--<P>
                         &#x2022; Collections Framework: List, Set, Map, Iterators, Enumerations, ArrayList, LinkedList, HashSet,
                         HashMap,TreeSet and TreeMap.
-                    </P>-->
-                </details>
-                </p>
-            </div>
-
-            <div class="skillscontainer">
-                <h3>Git & Github</h3>
-                <p>With +8h of Self-teaching (through youtube tutorials, reading and practicing), I have learnt the core concepts of version control managment (GIT), well as the importance of using remote repository(GITHUB)</p>
-                <p>
-                    <details>
-                    <summary>Topics:</summary>
-                    <p>&#x2022; <b>General:</b> Local and remote repository utility, checking status, rename, move, delete, restore, ignore(.gitignore) and track files.</p>
-                    <p>&#x2022; <b>Staging:</b> Adding, removing, comparing files on the stage area.</p>
-                    <p>&#x2022; <b>Comminting:</b> Commiting files, checking commits, comparing changes, reseting past commits.</p>
-                    <p>&#x2022; <b>Branches:</b> Creating, deleting, changing and merging branches.</p>
+                        </P>-->
                     </details>
-                </p>
-                
-            </div>
-        </section>
+                    </p>
+                </div>
+            </section>
+        </div>
 
     </main>
 
