Finalinzing the career.

--- a/career.html
+++ b/career.html
@@ -79,86 +79,83 @@
         </section>
 
         <h2><span class="coloredLetter">S</span>kills:</h2>
-        <div id="bodycontainer">
-            <section class="skillsSection">
+
+        <section id="skillsContainer">
+
+            <section class="leftSkills">
                 <div class="skill">
                     <h3>Html5 & Css3</h3>
-                    <p>With +20h of self-teaching (through youtube tutorials, reading and practicing) I have learnt the
-                        Fundamentals of HTML5 and CSS3.
-                    </p>
+                    <p>With +20h of self-teaching (through youtube tutorials, reading and practicing) I have learnt the Fundamentals of HTML5 and CSS3.</p>
                     <p>
-                    <details>
-                        <summary>Topics:</summary>
-                        <p>&#x2022;<b>For HTML</b>&#x2022;</p>
-                        <p>&#x2022; <b>Html Document structure:</b> Head and body tags</p>
-                        <p>&#x2022; <b>Tags:</b> Texts and paragraphs tags, Lists, Table, Links, Imgs.</p>
-                        <p>&#x2022; <b>Containers:</b> Div and nav tags.</p>
-                        <p>&#x2022; <b>Semantic Html:</b> Section,nav, main, header, footer, article and aside tags.</p>
+                        <details>
+                            <summary>Topics:</summary>
+                            <p>&#x2022;<b>For HTML</b>&#x2022;</p>
+                            <p>&#x2022; <b>Html Document structure:</b> Head and body tags</p>
+                            <p>&#x2022; <b>Tags:</b> Texts and paragraphs tags, Lists, Table, Links, Imgs.</p>
+                            <p>&#x2022; <b>Containers:</b> Div and nav tags.</p>
+                            <p>&#x2022; <b>Semantic Html:</b> Section,nav, main, header, footer, article and aside tags.</p>
 
-                        <p>&#x2022;<b>For CSS</b>&#x2022;</p>
-                        <p>&#x2022; <b>Selectors:</b> Element, class and id.</p>
-                        <p>&#x2022; <b>Box Model:</b> Magin, Border and Padding.</p>
-                        <p>&#x2022; <b>Layout Techniques:</b> Display, Position and Float.</p>
-                        <p>&#x2022; <b>Typography & Colors:</b> Color, background-color, text align, line height,
-                            letter-spacing, font-family, font-weight, font size and google fonts.</p>
-                        <p>&#x2022; <b>Flexbox:</b> Justify-content, align-items and flex-wrap.</p>
-                        <p>&#x2022; Transitions and Animations.</p>
-                    </details>
+                            <p>&#x2022;<b>For CSS</b>&#x2022;</p>
+                            <p>&#x2022; <b>Selectors:</b> Element, class and id.</p>
+                            <p>&#x2022; <b>Box Model:</b> Magin, Border and Padding.</p>
+                            <p>&#x2022; <b>Layout Techniques:</b> Display, Position and Float.</p>
+                            <p>&#x2022; <b>Typography & Colors:</b> Color, background-color, text align, line height,letter-spacing, font-family, font-weight, font size and google fonts.</p>
+                            <p>&#x2022; <b>Flexbox:</b> Justify-content, align-items and flex-wrap.</p>
+                            <p>&#x2022; Transitions and Animations.</p>
+                        </details>
                     </p>
                 </div>
 
                 <div class="skill">
                     <h3>Git & Github</h3>
-                    <p>With +8h of Self-teaching (through youtube tutorials, reading and practicing), I have learnt the
-                        core concepts of version control managment (GIT), well as the importance of using remote
-                        repository(GITHUB)</p>
+                    <p>With +8h of Self-teaching (through youtube tutorials, reading and practicing), I have learnt the core concepts of version control managment (GIT), well as the importance of using remotemrepository (GITHUB).</p>
                     <p>
-                    <details>
-                        <summary>Topics:</summary>
-                        <p>&#x2022; <b>General:</b> Local and remote repository utility, checking status, rename, move,
-                            delete, restore, ignore(.gitignore) and track files.</p>
-                        <p>&#x2022; <b>Staging:</b> Adding, removing, comparing files on the stage area.</p>
-                        <p>&#x2022; <b>Comminting:</b> Commiting files, checking commits, comparing changes, reseting
-                            past commits.</p>
-                        <p>&#x2022; <b>Branches:</b> Creating, deleting, changing and merging branches.</p>
-                    </details>
+                        <details>
+                            <summary>Topics:</summary>
+                            <p>&#x2022; <b>General:</b> Local and remote repository utility, checking status, rename, move,
+                                delete, restore, ignore(.gitignore) and track files.</p>
+                            <p>&#x2022; <b>Staging:</b> Adding, removing, comparing files on the stage area.</p>
+                            <p>&#x2022; <b>Comminting:</b> Commiting files, checking commits, comparing changes, reseting
+                                past commits.</p>
+                            <p>&#x2022; <b>Branches:</b> Creating, deleting, changing and merging branches.</p>
+                        </details>
                     </p>
                 </div>
             </section>
-            <section class="skillsSection">
-                
+
+            <section class="rightSkills"> 
                 <div class="skill">
                     <h3>Java</h3>
-                    <p>With +5h of youtube tutorials and 22h of practicing classes at the University I have learnt the
-                        intermediate and some advance concepts of Java.</p>
+                    <p>With +5h of youtube tutorials and 22h of practicing classes at the University I have learnt the intermediate and some advance concepts of Java.</p>
                     <p>
-                    <details>
-                        <summary>Topics:</summary>
-                        <p>
-                            &#x2022; <b>Java basics:</b> Variables, Data types, Operators and Expressions.
-                        </p>
-                        <p>
-                            &#x2022; <b>Control Flow Statements:</b> Conditional Statements and Looping Statements.
-                        </p>
-                        <p>
-                            &#x2022; <b>Object Oriented Programming: </b>Objects, Classes, Inheritance, Polymorphism,
-                            Encapsulation, Interfaces and Abstraction.
-                        </p>
-                        <P>
-                            &#x2022; <b>Exception handling:</b> Try-catch blocks and custom exception handling.
-                        </P>
-                        <P>
-                            &#x2022; <b>File handling:</b> Reading and writing to files.
-                        </P>
-                        <!--<P>
-                        &#x2022; Collections Framework: List, Set, Map, Iterators, Enumerations, ArrayList, LinkedList, HashSet,
-                        HashMap,TreeSet and TreeMap.
-                        </P>-->
-                    </details>
+                        <details>
+                            <summary>Topics:</summary>
+                            <p>
+                                &#x2022; <b>Java basics:</b> Variables, Data types, Operators and Expressions.
+                            </p>
+                            <p>
+                                &#x2022; <b>Control Flow Statements:</b> Conditional Statements and Looping Statements.
+                            </p>
+                            <p>
+                                &#x2022; <b>Object Oriented Programming: </b>Objects, Classes, Inheritance, Polymorphism,
+                                Encapsulation, Interfaces and Abstraction.
+                            </p>
+                            <P>
+                                &#x2022; <b>Exception handling:</b> Try-catch blocks and custom exception handling.
+                            </P>
+                            <P>
+                                &#x2022; <b>File handling:</b> Reading and writing to files.
+                            </P>
+                            <!--<P>
+                            &#x2022; Collections Framework: List, Set, Map, Iterators, Enumerations, ArrayList, LinkedList, HashSet,
+                            HashMap,TreeSet and TreeMap.
+                            </P>-->
+                        </details>
                     </p>
                 </div>
             </section>
-        </div>
+
+        </section>
 
     </main>
 
