Html last topic to bold

--- a/career.html
+++ b/career.html
@@ -101,7 +101,7 @@
                             <p>&#x2022; <b>Layout Techniques:</b> Display, Position and Float.</p>
                             <p>&#x2022; <b>Typography & Colors:</b> Color, background-color, text align, line height,letter-spacing, font-family, font-weight, font size and google fonts.</p>
                             <p>&#x2022; <b>Flexbox:</b> Justify-content, align-items and flex-wrap.</p>
-                            <p>&#x2022; Transitions and Animations.</p>
+                            <p>&#x2022; <b>Transitions and Animations.</b></p>
                         </details>
                     </p>
                 </div>
