--- a/portifolio.html
+++ b/portifolio.html
@@ -51,18 +51,18 @@
 
             <div class="skillsTitleLogo">
                 <h2 class="skillsTitle"><a href="about.html">Html & CSS</a></h2>
-                
                 <img src="Images/HTMLCSS-LOGO1.png" alt="Html and CSS logo" class="Logo">
             </div>
 
             <div class="skills">
+
                 <div class="myProjects htmlProjects" id="HtmlCSS01">
-                    <a href="index.html"><img src="Images/HTMLCSSPROJECT01.png" alt="Photo to represent my Website"></a>
+                    <a href="index.html"><img src="Images/Projects/HTMLCSSPROJECT01.png" alt="Photo to represent my Website"></a>
 
                     <h4 class="projectTitle"><a href="index.html">My Developer Website</a></h4>
 
                     <div class="projectDescription" id="HTML01Description">
-                        <p>My first HTML and CSS project.</p>
+                        <p>HTML and CSS project.</p>
                         <p>Duration: 10 days.</p>
                         <p>Finishing date: 2025 February 21th.</p>
                     </div></a>
@@ -74,8 +74,6 @@
                 <div class="myProjects htmlProjects" id="HtmlCSS03">
                 </div>
 
-                <div class="myProjects htmlProjects" id="HtmlCSS04">
-                </div>
             </div>
 
             <div class="skillsTitleLogo">
@@ -84,7 +82,16 @@
             </div>
 
             <div class="skills">
+
                 <div class="myProjects jsProjects" id="HtmlJS01">
+                    <a href="https://andre-dalva.github.io/temperatureconverter/" target="_blank"><img src="Images/Projects/TemperatureConverter.png" alt="TemperatureConverter"></a>
+                    <h4 class="projectTitle"><a href="https://andre-dalva.github.io/temperatureconverter/">Temperature Converter</a></h4>
+
+                    <div class="projectDescription" id="HTML01Description">
+                        <p>HTML, CSS and JavaScript project.</p>
+                        <p>Duration: 5 hours.</p>
+                        <p>Finishing date: 2025 March 8th.</p>
+                    </div></a>
                 </div>
 
                 <div class="myProjects jsProjects" id="HtmlJS02">
