Changing the border color

--- a/portifolio.html
+++ b/portifolio.html
@@ -87,7 +87,7 @@
                     <a href="https://andre-dalva.github.io/temperatureconverter/" target="_blank"><img src="Images/Projects/TemperatureConverter.png" alt="TemperatureConverter"></a>
                     <h4 class="projectTitle"><a href="https://andre-dalva.github.io/temperatureconverter/">Temperature Converter</a></h4>
 
-                    <div class="projectDescription" id="HTML01Description">
+                    <div class="projectDescription" id="HtmlJS01Description">
                         <p>HTML, CSS and JavaScript project.</p>
                         <p>Duration: 5 hours.</p>
                         <p>Finishing date: 2025 March 8th.</p>
