Adding the Random Password Generator

--- a/portifolio.html
+++ b/portifolio.html
@@ -95,6 +95,14 @@
                 </div>
 
                 <div class="myProjects jsProjects" id="HtmlJS02">
+                    <a href="https://andre-dalva.github.io/passwordgenerator/" target="_blank"><img src="Images/Projects/PASSWORDGENERATOR.png" alt="Random Password Generator Program"></a>
+                    <h4 class="projectTitle"><a href="https://andre-dalva.github.io/temperatureconverter/">Random Password Generator</a></h4>
+
+                    <div class="projectDescription" id="HtmlJS02Description">
+                        <p>HTML, CSS and JavaScript project.</p>
+                        <p>Duration: 8 hours.</p>
+                        <p>Finishing date: 2025 March 9th.</p>
+                    </div></a>
                 </div>
 
                 <div class="myProjects jsProjects" id="HtmlJS03">
