Correcting the link to the other project

--- a/portifolio.html
+++ b/portifolio.html
@@ -85,7 +85,7 @@
 
                 <div class="myProjects jsProjects" id="HtmlJS01">
                     <a href="https://andre-dalva.github.io/temperatureconverter/" target="_blank"><img src="Images/Projects/TemperatureConverter.png" alt="TemperatureConverter"></a>
-                    <h4 class="projectTitle"><a href="https://andre-dalva.github.io/temperatureconverter/">Temperature Converter</a></h4>
+                    <h4 class="projectTitle"><a href="https://andre-dalva.github.io/temperatureconverter/" target="_blank">Temperature Converter</a></h4>
 
                     <div class="projectDescription" id="HtmlJS01Description">
                         <p>HTML, CSS and JavaScript project.</p>
@@ -96,7 +96,7 @@
 
                 <div class="myProjects jsProjects" id="HtmlJS02">
                     <a href="https://andre-dalva.github.io/passwordgenerator/" target="_blank"><img src="Images/Projects/PASSWORDGENERATOR.png" alt="Random Password Generator Program"></a>
-                    <h4 class="projectTitle"><a href="https://andre-dalva.github.io/temperatureconverter/">Random Password Generator</a></h4>
+                    <h4 class="projectTitle"><a href="https://andre-dalva.github.io/passwordgenerator/" target="_blank">Random Password Generator</a></h4>
 
                     <div class="projectDescription" id="HtmlJS02Description">
                         <p>HTML, CSS and JavaScript project.</p>
