Linking the skillsTitle to career

--- a/portifolio.html
+++ b/portifolio.html
@@ -50,7 +50,7 @@
         <section class="webSkills">
 
             <div class="skillsTitleLogo">
-                <h2 class="skillsTitle"><a href="about.html">Html & CSS</a></h2>
+                <h2 class="skillsTitle"><a href="career.html">Html & CSS</a></h2>
                 <img src="Images/HTMLCSS-LOGO1.png" alt="Html and CSS logo" class="Logo">
             </div>
 
@@ -65,7 +65,7 @@
                         <p>HTML and CSS project.</p>
                         <p>Duration: 10 days.</p>
                         <p>Finishing date: 2025 February 21th.</p>
-                    </div></a>
+                    </div>
                 </div>
 
                 <div class="myProjects htmlProjects" id="HtmlCSS02">
@@ -77,7 +77,7 @@
             </div>
 
             <div class="skillsTitleLogo">
-                <h2 class="skillsTitle"><a href="about.html">Html, CSS & Javascript </a></h2>
+                <h2 class="skillsTitle"><a href="career.html">Html, CSS & Javascript </a></h2>
                 <img src="Images/HTMLCSSJS-LOGO.png" alt="Html, CSS and Javascript logo" class="Logo">
             </div>
 
@@ -113,7 +113,7 @@
         <section class="programmingSkill">
 
             <div class="skillsTitleLogo">
-                <h2 class="skillsTitle" id="javaTitle"><a href="about.html">Java</a></h2>
+                <h2 class="skillsTitle" id="javaTitle"><a href="career.html">Java</a></h2>
                 <img src="Images/JAVA-LOGO1.png" alt="Java logo" class="Logo" id="JAVA-LOGO">
             </div>
 
@@ -129,7 +129,7 @@
             </div>
 
             <div class="skillsTitleLogo">
-                <h2 class="skillsTitle"><a href="about.html">Data Base Handling</a></h2>
+                <h2 class="skillsTitle"><a href="career.html">Data Base Handling</a></h2>
                 <img src="Images/DATABASE-LOGO1.png" alt="Database Logo" class="Logo" id="DATABASE-LOGO1">
             </div>
 
