Add title and Image

--- a/portifolio.html
+++ b/portifolio.html
@@ -57,7 +57,9 @@
             <div class="skills">
 
                 <div class="myProjects htmlProjects" id="HtmlCSS01">
-                    <a href="index.html"><img src="Images/Projects/HTMLCSSPROJECT01.png" alt="Photo to represent my Website"></a>
+                    <a href="index.html">
+                        <img src="Images/Projects/HTMLCSSPROJECT01.png" alt="Photo to represent my Website">
+                    </a>
 
                     <h4 class="projectTitle"><a href="index.html">My Developer Website</a></h4>
 
@@ -84,8 +86,14 @@
             <div class="skills">
 
                 <div class="myProjects jsProjects" id="HtmlJS01">
-                    <a href="https://andre-dalva.github.io/temperatureconverter/" target="_blank"><img src="Images/Projects/TemperatureConverter.png" alt="TemperatureConverter"></a>
-                    <h4 class="projectTitle"><a href="https://andre-dalva.github.io/temperatureconverter/" target="_blank">Temperature Converter</a></h4>
+
+                    <a href="https://andre-dalva.github.io/temperatureconverter/" target="_blank">
+                        <img src="Images/Projects/TemperatureConverter.png" alt="TemperatureConverter">
+                    </a>
+
+                    <h4 class="projectTitle">
+                        <a href="https://andre-dalva.github.io/temperatureconverter/" target="_blank">Temperature Converter</a>
+                    </h4>
 
                     <div class="projectDescription" id="HtmlJS01Description">
                         <p>HTML, CSS and JavaScript project.</p>
@@ -95,8 +103,14 @@
                 </div>
 
                 <div class="myProjects jsProjects" id="HtmlJS02">
-                    <a href="https://andre-dalva.github.io/passwordgenerator/" target="_blank"><img src="Images/Projects/PASSWORDGENERATOR.png" alt="Random Password Generator Program"></a>
-                    <h4 class="projectTitle"><a href="https://andre-dalva.github.io/passwordgenerator/" target="_blank">Random Password Generator</a></h4>
+
+                    <a href="https://andre-dalva.github.io/passwordgenerator/" target="_blank">
+                        <img src="Images/Projects/PASSWORDGENERATOR.png" alt="Random Password Generator Program">
+                    </a>
+
+                    <h4 class="projectTitle">
+                        <a href="https://andre-dalva.github.io/passwordgenerator/" target="_blank">Random Password Generator</a>
+                    </h4>
 
                     <div class="projectDescription" id="HtmlJS02Description">
                         <p>HTML, CSS and JavaScript project.</p>
@@ -106,6 +120,14 @@
                 </div>
 
                 <div class="myProjects jsProjects" id="HtmlJS03">
+
+                    <a href="https://andre-dalva.github.io/rockpaperscissorsgame/index.html">
+                        <img src="Images/Projects/RockPaperandScissors.png" alt="">
+                    </a>
+
+                    <h4 class="projectTitle">
+                        <a href="https://andre-dalva.github.io/rockpaperscissorsgame/index.html">Rock, Paper & Scissors Game</a>
+                    </h4>
                 </div>
             </div>
         </section>
