Adding description to the project

--- a/portifolio.html
+++ b/portifolio.html
@@ -85,7 +85,7 @@
 
             <div class="skills">
 
-                <div class="myProjects jsProjects" id="HtmlJS01">
+                <div class="myProjects" id="HtmlJS01">
 
                     <a href="https://andre-dalva.github.io/temperatureconverter/" target="_blank">
                         <img src="Images/Projects/TemperatureConverter.png" alt="TemperatureConverter">
@@ -102,7 +102,7 @@
                     </div></a>
                 </div>
 
-                <div class="myProjects jsProjects" id="HtmlJS02">
+                <div class="myProjects" id="HtmlJS02">
 
                     <a href="https://andre-dalva.github.io/passwordgenerator/" target="_blank">
                         <img src="Images/Projects/PASSWORDGENERATOR.png" alt="Random Password Generator Program">
@@ -116,18 +116,24 @@
                         <p>HTML, CSS and JavaScript project.</p>
                         <p>Duration: 8 hours.</p>
                         <p>Finishing date: 2025 March 9th.</p>
-                    </div></a>
+                    </div>
                 </div>
 
-                <div class="myProjects jsProjects" id="HtmlJS03">
+                <div class="myProjects" id="HtmlJS03">
 
-                    <a href="https://andre-dalva.github.io/rockpaperscissorsgame/index.html">
+                    <a href="https://andre-dalva.github.io/rockpaperscissorsgame/index.html" target="_blank">
                         <img src="Images/Projects/RockPaperandScissors.png" alt="">
                     </a>
 
                     <h4 class="projectTitle">
-                        <a href="https://andre-dalva.github.io/rockpaperscissorsgame/index.html">Rock, Paper & Scissors Game</a>
+                        <a href="https://andre-dalva.github.io/rockpaperscissorsgame/index.html" target="_blank">Rock, Paper & Scissors Game</a>
                     </h4>
+
+                    <div class="projectDescription" id="HtmlJS03Description">
+                        <p>HTML, CSS and JavaScript project.</p>
+                        <p>Duration: 4 days.</p>
+                        <p>Finishing date: 2025 March 20th.</p>
+                    </div>
                 </div>
             </div>
         </section>
