--- a/career.html
+++ b/career.html
@@ -66,16 +66,16 @@
         <h2><span class="coloredLetter">E</span>ducation:</h2>
         <section class="schoolPath">
             <h3>High School:</h3>
-            <p>At the National High School, in São Tomé and Príncipe, I have studied (in Portuguese) subjects like:
+            <p>At the National High School, in São Tomé and Príncipe, I studied (in Portuguese) subjects like:
                 Physics, Chemistry, Mathematics.</p>
 
             <h3>University:</h3>
             <p>Currently in my second year at the University of Debrecen, majoring in Computer Science Engineering
-                (CSE), I have covered key subjects such as: Data Structures and Algorithm, Programming Languages I &
+                (CSE), I have covered key subjects such as: Data Structures and Algorithms, Programming Languages I &
                 II(Java).</p>
 
             <h3>Aimed Goals:</h3>
-            <p>For now, I am focused on learning Javascript and Data Base.</p>
+            <p>For now, I am focused on learning Javascript and Database.</p>
         </section>
 
         <h2><span class="coloredLetter">S</span>kills:</h2>
@@ -83,22 +83,22 @@
 
             <section class="leftSkills">
                 <div class="skill">
-                    <h3>Html5 & Css3</h3>
-                    <p>With +20h of self-teaching (through youtube tutorials, reading and practicing) I have learnt the Fundamentals of HTML5 and CSS3.</p>
+                    <h3>HTML5 & CSS3</h3>
+                    <p>With over 20h of self-teaching (through youtube tutorials, reading and practicing) I have learned the Fundamentals of HTML5 and CSS3.</p>
                     <p>
                         <details>
                             <summary>Topics:</summary>
                             <p>&#x2022;<b>For HTML</b>&#x2022;</p>
-                            <p>&#x2022; <b>Html Document structure:</b> Head and body tags</p>
-                            <p>&#x2022; <b>Tags:</b> Texts and paragraphs tags, Lists, Table, Links, Imgs.</p>
+                            <p>&#x2022; <b>HTML Document structure:</b> Head and body tags</p>
+                            <p>&#x2022; <b>Tags:</b> Texts and paragraphs tags, Lists, Table, Links, Images.</p>
                             <p>&#x2022; <b>Containers:</b> Div and nav tags.</p>
-                            <p>&#x2022; <b>Semantic Html:</b> Section,nav, main, header, footer, article and aside tags.</p>
+                            <p>&#x2022; <b>Semantic HTML:</b> Section,nav, main, header, footer, article and aside tags.</p>
 
                             <p>&#x2022;<b>For CSS</b>&#x2022;</p>
                             <p>&#x2022; <b>Selectors:</b> Element, class and id.</p>
-                            <p>&#x2022; <b>Box Model:</b> Magin, Border and Padding.</p>
+                            <p>&#x2022; <b>Box Model:</b> Margin, Border and Padding.</p>
                             <p>&#x2022; <b>Layout Techniques:</b> Display, Position and Float.</p>
-                            <p>&#x2022; <b>Typography & Colors:</b> Color, background-color, text align, line height,letter-spacing, font-family, font-weight, font size and google fonts.</p>
+                            <p>&#x2022; <b>Typography & Colors:</b> Color, background-color, text-align, line-height,letter-spacing, font-family, font-weight, font size and Google Fonts.</p>
                             <p>&#x2022; <b>Flexbox:</b> Justify-content, align-items and flex-wrap.</p>
                             <p>&#x2022; <b>Transitions and Animations.</b></p>
                         </details>
@@ -107,14 +107,14 @@
 
                 <div class="skill">
                     <h3>Git & Github</h3>
-                    <p>With +8h of Self-teaching (through youtube tutorials, reading and practicing), I have learnt the core concepts of version control managment (GIT), well as the importance of using remotemrepository (GITHUB).</p>
+                    <p>With over 8h of self-teaching (through youtube tutorials, reading and practicing), I have learned the core concepts of version control management (Git), as well as the importance of using remote repository (GitHub).</p>
                     <p>
                         <details>
                             <summary>Topics:</summary>
                             <p>&#x2022; <b>General:</b> Local and remote repository utility, checking status, rename, move,
                                 delete, restore, ignore(.gitignore) and track files.</p>
                             <p>&#x2022; <b>Staging:</b> Adding, removing, comparing files on the stage area.</p>
-                            <p>&#x2022; <b>Comminting:</b> Commiting files, checking commits, comparing changes, reseting
+                            <p>&#x2022; <b>Committing:</b> Committing files, checking commits, comparing changes, resetting
                                 past commits.</p>
                             <p>&#x2022; <b>Branches:</b> Creating, deleting, changing and merging branches.</p>
                         </details>
@@ -125,25 +125,25 @@
             <section class="rightSkills"> 
                 <div class="skill">
                     <h3>Java</h3>
-                    <p>With +5h of youtube tutorials and 22h of practicing classes at the University I have learnt the intermediate and some advance concepts of Java.</p>
+                    <p>With over 5h of youtube tutorials and 22h of practical classes at the University I have learned the intermediate and some advanced concepts of Java.</p>
                     <p>
                         <details>
                             <summary>Topics:</summary>
                             <p>
-                                &#x2022; <b>Java basics:</b> Variables, Data types, Operators and Expressions.
+                                &#x2022; <b>Java Basics:</b> Variables, Data types, Operators and Expressions.
                             </p>
                             <p>
                                 &#x2022; <b>Control Flow Statements:</b> Conditional Statements and Looping Statements.
                             </p>
                             <p>
-                                &#x2022; <b>Object Oriented Programming: </b>Objects, Classes, Inheritance, Polymorphism,
+                                &#x2022; <b>Object-Oriented Programming: </b>Objects, Classes, Inheritance, Polymorphism,
                                 Encapsulation, Interfaces and Abstraction.
                             </p>
                             <P>
-                                &#x2022; <b>Exception handling:</b> Try-catch blocks and custom exception handling.
+                                &#x2022; <b>Exception Handling:</b> Try-catch blocks and custom exception handling.
                             </P>
                             <P>
-                                &#x2022; <b>File handling:</b> Reading and writing to files.
+                                &#x2022; <b>File Handling:</b> Reading and writing to files.
                             </P>
                             <!--<P>
                             &#x2022; Collections Framework: List, Set, Map, Iterators, Enumerations, ArrayList, LinkedList, HashSet,
