Adding the Clock

--- a/portifolio.html
+++ b/portifolio.html
@@ -135,6 +135,23 @@
                         <p>Finishing date: 2025 March 20th.</p>
                     </div>
                 </div>
+
+                <div class="myProjects" id="HtmlJS04">
+
+                    <a href="https://andre-dalva.github.io/clock/" target="_blank">
+                        <img src="Images/Projects/CLOCK.png" alt="">
+                    </a>
+
+                    <h4 class="projectTitle">
+                        <a href="https://andre-dalva.github.io/clock/" target="_blank">Clock</a>
+                    </h4>
+
+                    <div class="projectDescription" id="HtmlJS04Description">
+                        <p>HTML, CSS and JavaScript project.</p>
+                        <p>Duration: 6 hours.</p>
+                        <p>Finishing date: 2025 March 31st.</p>
+                    </div>
+                </div>
             </div>
         </section>
 
